Bug 479984 - Alt+tab does not work with switching virtual desktops
Summary: Alt+tab does not work with switching virtual desktops
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-18 09:29 UTC by Akseli Lahtinen
Modified: 2024-01-25 08:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Akseli Lahtinen 2024-01-18 09:29:31 UTC
SUMMARY

In my kdesrc-built Plasma 6 setup, I have rebound Meta+tab to switch between windows, and Alt+tab to switch between virtual desktops.

Meta+tab works, but alt+tab is seemingly not recognised: Apps tend to think im just pressing alt and tab, and the combo does not do anything.

STEPS TO REPRODUCE
1. Set shortcut for window switching to meta+tab
2. Set shortcut for switching between virtual desktops to alt+tab

OBSERVED RESULT
Alt+tab no worky

EXPECTED RESULT
Alt+tab would switch between virtual desktops

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 39
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.0
Kernel Version: 6.6.11-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600

ADDITIONAL INFORMATION
I get no errors in journalctl or crashes.
Comment 1 duha.bugs 2024-01-18 18:26:11 UTC
Which keyboard shortcut did you assign to ALT+TAB?

Works for me on git master if I set it to "Switch to next Desktop".

Possibly conflicting shortcuts?
Comment 2 Akseli Lahtinen 2024-01-18 19:27:02 UTC
I set it to "walk through desktops"

Does not work with Switch to next Desktop either, though
Comment 3 Nate Graham 2024-01-18 20:52:31 UTC
Which exact actions have you bound Alt+Tab (and presumably, Alt+Shift+Tab for reverse) to? I see several that could qualify.
Comment 4 Akseli Lahtinen 2024-01-18 23:51:54 UTC
Walk through desktops: alt+tab

Walk through desktops (reverse): alt+shift+tab
Comment 5 Akseli Lahtinen 2024-01-18 23:53:05 UTC
For some reason now the following work:

Switch to next desktop: alt+tab

Switch to previous desktop: alt+shift+tab
Comment 6 Nicolas Fella 2024-01-19 14:56:36 UTC
I think this was intentionally dropped in https://invent.kde.org/plasma/kwin/-/merge_requests/3871

It seems there is a bug where kglobalaccel doesn't "forget" the non-existent action
Comment 7 Vlad Zahorodnii 2024-01-24 14:18:41 UTC
> It seems there is a bug where kglobalaccel doesn't "forget" the non-existent action

Should we add a kconf_update script or something to drop these actions?
Comment 8 Bug Janitor Service 2024-01-24 14:49:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5036
Comment 9 Vlad Zahorodnii 2024-01-25 08:53:03 UTC
Git commit 2505fd03f1bbbaaef33668ad8030c6b0578328a6 by Vlad Zahorodnii.
Committed on 25/01/2024 at 09:52.
Pushed by vladz into branch 'master'.

kconf_update: Add script to drop old desktop switching shortcuts

M  +5    -0    kconf_update/CMakeLists.txt
A  +33   -0    kconf_update/kwin-6.0-delete-desktop-switching-shortcuts.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/2505fd03f1bbbaaef33668ad8030c6b0578328a6
Comment 10 Vlad Zahorodnii 2024-01-25 08:58:50 UTC
Git commit 7f8c41bedc3b6d9ba50e77843ae8d18dfbf25f76 by Vlad Zahorodnii.
Committed on 25/01/2024 at 09:57.
Pushed by vladz into branch 'Plasma/6.0'.

kconf_update: Add script to drop old desktop switching shortcuts
(cherry picked from commit 2505fd03f1bbbaaef33668ad8030c6b0578328a6)

M  +5    -0    kconf_update/CMakeLists.txt
A  +33   -0    kconf_update/kwin-6.0-delete-desktop-switching-shortcuts.cpp     [License: GPL(v2.0+)]
M  +4    -0    kconf_update/kwin.upd

https://invent.kde.org/plasma/kwin/-/commit/7f8c41bedc3b6d9ba50e77843ae8d18dfbf25f76