kconf_update: Add script to drop old desktop switching shortcuts

BUG: 479984